--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
 # These are individuals that contributed to this repository
 
 Enid Chebet <enidbii0@gmail.com>
+Collins Kipkorir <ebiizcomp@gmail.com>
